// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shouled correctly render ExperimentSummary one expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totaling 
    $123.00
  </h1>
</div>
`;

exports[`shouled correctly render ExperimentSummary with multiple expense 1`] = `
<div>
  <h1>
    viewing 
    23
     
    expenses
     totaling 
    $123,343.00
  </h1>
</div>
`;
